# elite2

./: .gitignore  CLAUDE.md  Cargo.toml  DECISIONS.md  DESIGN.md  GAMEPLAY.md  LICENSE-MIT  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
src/: main.rs  wiring.rs
src/plugins/: camera.rs  core.rs  devshot.rs  flight.rs  hud.rs  mod.rs  skybox.rs  starfield.rs  world.rs
src/plugins/combat/: ai.rs  collision.rs  components.rs  events.rs  mod.rs  readout.rs  spawn.rs  survival.rs  weapons.rs
